# TalentRadar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  cli.py  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  scheduler.py
config/: api_keys.yaml  config.yaml  database.yaml  logging.yaml  scoring.yaml  search.yaml
contacts/: clients.py  finder.py
cv/: loader.py  parser.py
db/: connection.py
db/models/: contact.py  job.py  message.py  resume.py
db/repositories/: contact_repo.py  job_repo.py  message_repo.py
docs/: struggle-tracker.md
docs/superpowers/plans/: 2026-04-19-job-search-agent.md  2026-04-27-docker.md  2026-05-02-contact-discovery-tui.md  (+1 more)
llm/: claude.py  protocol.py
messaging/: generator.py
pipeline/: combiner.py  orchestrator.py  state.py
scoring/: contact_scorer.py  job_scorer.py
search/: filters.py  google.py  linkedin.py
tests/integration/: test_pipeline.py
tests/unit/: test_cli_no_ui.py  test_combiner.py  test_contact_finder.py  test_contact_scorer.py  test_cv_loader.py  test_cv_parser.py  test_google_search.py  test_job_scorer.py  test_linkedin_search.py  test_llm.py  test_logger.py  test_message_generator.py  test_models.py  test_orchestrator.py  test_repositories.py  test_state.py  test_tui.py  test_ui_renderer.py  test_vibe_client.py  test_web_config_writer.py  test_web_results.py
ui/: renderer.py  tui.py
ui/widgets/: contacts_table.py  jobs_table.py  messages_panel.py  progress_panel.py
utils/: logger.py
web/: app.py  config_writer.py  results.py  start.sh
(+4 files in other folders)
